--- a/css/checkin.css
+++ b/css/checkin.css
@@ -1,4 +1,9 @@
-.background{
+html{
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+.background {
   position: absolute;
   top: 0;
   left: 0;
@@ -6,14 +11,56 @@
   width: 100%;
   height: 100%;
 }
-#scan_div {
-  padding: 10px;
+.next_button_container {
+  display: inline-block;
+  position: relative;
+  height: 100%;
+  vertical-align: top;
+}
+.next_button {
+  position: absolute;
+  top: 50%;
+  width: 70px;
+  height: 70px;
+  background-color: white;
+  border: solid #000;
+  border-width: 1px;
+  margin: -50px 0 0 0;
+}
+.next_button_offset {
+  left: 54px;
+}
+#center_content_holder {
+  height: 309px;
+  width: 600px;
+  margin: 0 auto;
+  position: relative;
+}
+#viewing_port_div {
   border-style: solid;
   border-color: #c5c5c5;
   border-width: 2px;
   width: 450px;
-  height: 285px;
-  margin: auto;
+  height: 100%;
+  display: inline-block;
+}
+.next_arrow {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin: -15px -10px;
+  width: 20px;
+  height: 30px;
+}
+.next_button {
+  display: inline-block;
+}
+.green_circle {
+  width: 100px;
+  height: 100px;
+  display: table;
+  margin: 0 auto;
+  padding: 50px;
 }
 .fill_container {
   width: 100%;
@@ -27,6 +74,12 @@
 }
 .sexy_sub_text {
   font: 15px arial, sans-serif;
+  color: #868686;
+  text-align: center;
+  padding: 15px;
+}
+.midsized_sub_text {
+  font: 20px arial, sans-serif;
   color: #868686;
   text-align: center;
   padding: 15px;
