--- a/css/checkin.css
+++ b/css/checkin.css
@@ -18,7 +18,7 @@ html{
   vertical-align: top;
 }
 .next_button {
-  position: absolute;
+  position: relative;
   top: 50%;
   width: 70px;
   height: 70px;
